--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -24,7 +24,7 @@
   height: 31rem;
   position: absolute;
   background: rgb(243, 241, 241);
-  z-index: 100;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -35,13 +35,17 @@
   transform: translatex(-15%);
   transform: translateY(-20%);
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.037);
+  container-type: inline-size;
+  height: -moz-max-content;
+  height: max-content;
+  overflow: hidden;
 }
 .about .container .content-About .right h1 {
-  font-size: 2.3rem;
+  font-size: 2rem;
   text-align: start;
-  letter-spacing: 0.1rem;
   margin: 12px 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.2;
 }
 .about .container .content-About .right h2 {
   font-weight: 400;
@@ -92,22 +96,87 @@
   margin-bottom: 1rem;
   transform: translateY(-70%);
 }
-.about .container .content-quality .left, .about .container .content-quality .middle, .about .container .content-quality .right {
+.about .container .content-quality .left,
+.about .container .content-quality .middle,
+.about .container .content-quality .right {
+  width: calc(40% - 30px);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.about .container .content-quality .left h2, .about .container .content-quality .middle h2, .about .container .content-quality .right h2 {
+.about .container .content-quality .left h2,
+.about .container .content-quality .middle h2,
+.about .container .content-quality .right h2 {
   font-size: 1rem;
 }
-.about .container .content-quality .left p, .about .container .content-quality .middle p, .about .container .content-quality .right p {
+.about .container .content-quality .left p,
+.about .container .content-quality .middle p,
+.about .container .content-quality .right p {
   font-size: 0.9rem;
   color: rgba(0, 0, 0, 0.8);
 }
-.about .container .content-quality .left .icon, .about .container .content-quality .middle .icon, .about .container .content-quality .right .icon {
+.about .container .content-quality .left .icon,
+.about .container .content-quality .middle .icon,
+.about .container .content-quality .right .icon {
   background: var(--gradientColor);
   padding: 18px 30px;
   color: white;
   margin: 0 20px;
   border-radius: 9px;
+}
+@media (max-width: 900px) {
+  .about .container {
+    margin: 0 0px;
+  }
+  .about .container .content-About {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 10rem;
+    overflow: hidden;
+  }
+  .about .container .content-About .left {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .about .container .content-About .right {
+    position: relative;
+    transform: translatex(0%);
+    transform: translateY(0%);
+    width: 100%;
+    height: -moz-min-content;
+    height: min-content;
+  }
+  .about .container .content-About .right h1 {
+    font-size: calc(1.175rem + 1.5vw);
+  }
+}
+@media (max-width: 900px) {
+  .about .container {
+    margin: 0 80px;
+  }
+  .about .container .content-quality {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .about .container .content-quality .left,
+  .about .container .content-quality .middle,
+  .about .container .content-quality .right {
+    width: calc(55% - 40px);
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 799px) {
+  .about .container .content-quality {
+    display: flex;
+    flex-direction: column;
+    transform: translateY(-36px);
+  }
+  .about .container .content-quality .left,
+  .about .container .content-quality .middle,
+  .about .container .content-quality .right {
+    width: 100%;
+    margin-bottom: 30px;
+  }
 }/*# sourceMappingURL=about.css.map */
