--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -10,7 +10,7 @@
         position: absolute;
         width: 45%;
         height: 50rem;
-        bottom: 1; 
+        bottom: 1;
         img {
           width: 100%;
           height: 100%;
@@ -22,26 +22,29 @@
         height: 31rem;
         position: absolute;
         background: rgb(243, 241, 241);
-        z-index: 100;
+        z-index: 10;
         display: flex;
         flex-direction: column;
         align-items: start;
         justify-content: center;
         text-align: justify;
-        padding: 60px ;
+        padding: 60px;
         right: 3%;
         transform: translatex(-15%);
         transform: translateY(-20%);
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.037);
+        container-type: inline-size;
+        height: max-content;
+        overflow: hidden;
 
         h1 {
-          font-size: 2.3rem;
+          font-size: 2rem;
           text-align: start;
-          letter-spacing: 0.1rem;
           margin: 12px 0;
           font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
             Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
             sans-serif;
+            line-height: 1.2;
         }
 
         h2 {
@@ -74,49 +77,116 @@
             padding-right: 30px;
           }
         }
-        
-          .btn {
-            border: none;
-            outline: none;
-            background: var(--gradientColor);
-            padding: 8px 25px;
-            color: white;
-            font-size: 0.8rem;
-            font-weight: 600;
-            margin-top: 10px;
-            &:hover{
-                background: var(--SecondaryColor);
-                cursor: pointer;
-            }
-          
+
+        .btn {
+          border: none;
+          outline: none;
+          background: var(--gradientColor);
+          padding: 8px 25px;
+          color: white;
+          font-size: 0.8rem;
+          font-weight: 600;
+          margin-top: 10px;
+          &:hover {
+            background: var(--SecondaryColor);
+            cursor: pointer;
+          }
         }
       }
+
     }
-    .content-quality{
+    .content-quality {
       display: flex;
       align-items: center;
       justify-content: space-between;
       margin-bottom: 1rem;
       transform: translateY(-70%);
-      .left,.middle,.right{
+      .left,
+      .middle,
+      .right {
+        width: calc(40% - 30px);
         display: flex;
         align-items: center;
         justify-content: space-between;
-        
-        h2{
+
+        h2 {
           font-size: 1rem;
         }
-        p{
+        p {
           font-size: 0.9rem;
           color: rgba(0, 0, 0, 0.8);
         }
-        .icon{
+        .icon {
           background: var(--gradientColor);
-          padding: 18px 30px ;
+          padding: 18px 30px;
           color: white;
           margin: 0 20px;
           border-radius: 9px;
+        }
+      }
+    }
+  }
 
+
+
+  @media (max-width: 900px) {
+    .container {
+      margin: 0 0px;
+      .content-About {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-bottom: 10rem;
+        overflow: hidden;
+        .left {
+
+          position: relative;
+          width: 100%;
+          margin-bottom: 20px;
+        }
+        .right {
+          position: relative;
+          transform: translatex(0%);
+          transform: translateY(0%);
+          width: 100%;
+          height: min-content;
+          h1{
+            font-size: calc(1.175rem + 1.5vw);
+        }
+     
+        }
+      }
+    }
+  }
+
+
+  @media (max-width: 900px) {
+    .container {
+      margin: 0 80px;
+      .content-quality {
+        display: flex;
+        flex-wrap: wrap;
+        .left,
+        .middle,
+        .right {
+          width: calc(55% - 40px);
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 799px) {
+    .container {
+      .content-quality {
+        display: flex;
+        flex-direction: column;
+        transform: translateY(-36px);
+        .left,
+        .middle,
+        .right {
+          width: 100%;
+          margin-bottom: 30px;
         }
       }
     }
