--- a/src/components/Service/service.scss
+++ b/src/components/Service/service.scss
@@ -6,10 +6,11 @@ $heroic: linear-gradient(to right, rgba(16, 181, 203, 0.3), rgba(0, 115, 168, 0.
   background-repeat: no-repeat;
   background-size: cover;
   margin-bottom: 30px;
-  height: 80vh;
+  height: max-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 110px 0;
 
   .title{
     display: flex;
@@ -17,35 +18,49 @@ $heroic: linear-gradient(to right, rgba(16, 181, 203, 0.3), rgba(0, 115, 168, 0.
     align-items: center;
     justify-content: center;
     color: var(--SecondaryColor);
+    container-type: inline-size;
+  
     
     h2{
       font-size: 1rem;
       font-weight: 400;
       letter-spacing: 10px;
-      margin-top: 20px;
+      margin-top: -10px;
     }
     h1{
       color: rgb(245, 240, 240);
-      margin-top: 10px;
+      margin-top: 5px;
     }
+  }
+  .title > h2{
+    font-size: 1.5cqi;
+  }
+  .title > h1{
+    font-size: 3cqi;
   }
   .content-services {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 30px;
+  
     .left,
     .middle,
     .right {
+      width: calc(40% - 10px);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
       background: $heroic;
       backdrop-filter: blur(5px);
-      padding: 30px 40px;
+      padding: 50px 40px;
       margin: 0 20px;
       color: white;
+      margin-top: 10px;
+
+      h2{
+        padding: 6px 0;
+      }
 
       p {
         text-align: center;
@@ -64,5 +79,108 @@ $heroic: linear-gradient(to right, rgba(16, 181, 203, 0.3), rgba(0, 115, 168, 0.
 
       }
     }
+  }
+
+  @media (max-width: 1000px) {
+   
+    .container {
+       margin: 0 100px;
+      .content-services {
+         display: flex;
+         flex-wrap: wrap;
+
+        .left,
+        .middle,
+        .right {
+          width: calc(40% + 13px);
+          display: flex;
+          flex-direction: column;
+          container-type: inline-size;
+          h2{
+            padding: 10px 0;
+          }
+        }
+        .left > h2{
+          font-size: 12cqi;
+        }
+        
+        .right > h2 {
+          font-size: 12cqi;
+        }
+        .middle > h2{
+          font-size: 12cqi;
+        }
+
+      }
+      .title{
+         container-type: inline-size;
+        h2{
+          
+          font-weight: 400;
+          letter-spacing: 10px;
+          margin-top: -10px;
+        }
+        h1{
+          color: rgb(245, 240, 240);
+          margin-top: 5px;
+        }
+      }
+       
+      }
+      .title > h2{
+        font-size: 2cqi;
+      }
+      .title > h1{
+        font-size: 4cqi;
+      }
+     
+  }
+  @media (max-width: 770px) {
+    .container { 
+       .content-services {
+         display: flex;
+         flex-direction: column;
+         justify-items: center;
+         
+        .left,
+        .middle,
+        .right {
+          width: 80%;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+       
+      }
+     
+  }
+  @media (max-width: 507px) {
+    .container { 
+       .content-services {
+         display: flex;
+         flex-direction: column;
+         justify-items: center;
+         
+        .left,
+        .middle,
+        .right {
+          width: calc(80% + 100px);
+          display: flex;
+          flex-direction: column;
+          transform: translateX(-60px);
+        }
+      }
+       
+      }
+      .title{
+        container-type: inline-size;
+      }
+      .title > h2{
+        font-size: 6cqi;
+      }
+      .title > h1{
+        font-size: 8cqi;
+      }
+     
   }
 }
