--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -41,7 +41,7 @@
   overflow: hidden;
 }
 .about .container .content-About .right h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: start;
   margin: 12px 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -93,8 +93,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 1rem;
-  transform: translateY(-70%);
+  margin-bottom: 0.4rem;
+  transform: translateY(-40%);
+  margin-top: 20px;
 }
 .about .container .content-quality .left,
 .about .container .content-quality .middle,
@@ -124,7 +125,7 @@
   margin: 0 20px;
   border-radius: 9px;
 }
-@media (max-width: 900px) {
+@media (max-width: 700px) {
   .about .container {
     margin: 0 0px;
   }
@@ -152,11 +153,20 @@
     font-size: calc(1.175rem + 1.5vw);
   }
 }
-@media (max-width: 900px) {
-  .about .container {
-    margin: 0 80px;
+@media (max-width: 600px) {
+  .about .container .content-About .right {
+    container-type: inline-size;
   }
+  .about .container .content-About .right > h1 {
+    font-size: 8cqi;
+  }
+  .about .container .content-About .right > h2 {
+    font-size: 5cqi;
+  }
+}
+@media (max-width: 900px) {
   .about .container .content-quality {
+    margin: 0 30px;
     display: flex;
     flex-wrap: wrap;
   }
