--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -38,7 +38,7 @@
         overflow: hidden;
 
         h1 {
-          font-size: 2rem;
+          font-size: 1.5rem;
           text-align: start;
           margin: 12px 0;
           font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -99,8 +99,9 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 1rem;
-      transform: translateY(-70%);
+      margin-bottom: 0.4rem;
+      transform: translateY(-40%);
+      margin-top: 20px;
       .left,
       .middle,
       .right {
@@ -129,7 +130,7 @@
 
 
 
-  @media (max-width: 900px) {
+  @media (max-width: 700px) {
     .container {
       margin: 0 0px;
       .content-About {
@@ -158,12 +159,31 @@
       }
     }
   }
+  @media (max-width: 600px) {
+    .container {
+      .content-About {
+        .right {
+          container-type: inline-size;
+      }
+        .right >h1{
+          font-size: 8cqi;
+        }
+        .right > h2{
+          font-size: 5cqi;
+        }
+     
+        
+      }
+    }
+  }
+
+
 
 
   @media (max-width: 900px) {
     .container {
-      margin: 0 80px;
       .content-quality {
+        margin: 0 30px;
         display: flex;
         flex-wrap: wrap;
         .left,
