--- a/src/components/Guides/guides.scss
+++ b/src/components/Guides/guides.scss
@@ -153,6 +153,7 @@
   }
   @media (max-width: 600px) {
     .container {  
+      margin: auto;
       .content-guides {
         display: flex;
         flex-wrap: wrap;
