--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -24,173 +24,306 @@
 }
 
 .footer {
-  height: 100vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  padding: 2rem 0;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
     url("f1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
- 
-  
-  .container {
+  .flex {
+    display: flex;
+    align-items: center;
+  }
+  .grid {
+    display: grid;
+    align-items: center;
+  }
+  .imagediv {
+    position: absolute;
     height: 100%;
-    .contact {
-      position: relative;
-      top: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .left {
-        margin: 20px 20px;
-        h2 {
-          color: white;
-          text-transform: uppercase;
-          font-size: 0.9rem;
-          font-weight: 300;
-          margin-bottom: 10px;
+    width: 100%;
+    img {
+      height: 100%;
+      object-fit: cover;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      background: rgba(64, 69, 66, 0.307);
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      mix-blend-mode: multiply;
+    }
+  }
+  .setContent {
+    width: 100%;
+    height: 100%;
+    padding: 2rem initial;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: auto;
+    z-index: 10;
+    .contactDiv {
+      justify-content: space-between;
+      flex-direction: column;
+      gap: 1rem;
+      .text {
+        small {
+          font-size: 13px;
+          font-weight: 400;
+          color: var(--whiteColor);
         }
-        h1 {
-          color: white;
-          text-transform: uppercase;
-          font-weight: 800;
+        h2 {
+          color: var(--whiteColor);
+          font-size: 1.8rem;
         }
       }
-      .input {
-        margin: 0 10px;
+      .inputDiv {
+        width: 100%;
+        gap: 1rem;
+        flex-direction: column;
         input {
-          background: none;
-          border-radius: 19px;
-          border: 2px solid #ccc;
+          width: 100%;
+          padding: 0.5rem 0.6rem;
+          border: 1px solid var(--whiteColor);
           outline: none;
-          padding: 10px 20px;
+          background: transparent;
+          color: var(--whiteColor);
+          border-radius: 3rem;
           &::placeholder {
-            color: #ccc;
-            font-size: 0.8rem;
-            font-weight: 100;
+            color: var(--whiteColor);
+            opacity: 0.5;
           }
         }
-      }
-      .btn {
-        button {
+        .btn {
+          width: 100%;
+          justify-content: center;
+          color: var(--whiteColor);
+          font-weight: 500;
+          gap: 0.5rem;
           outline: none;
           border: none;
           background: var(--gradientColor);
           border-radius: 20px;
-          padding: 8px 40px;
+          padding: 8px 20px;
           color: white;
           cursor: pointer;
-            &:hover{
-                background: var(--SecondaryColor);
-            }
+          &:hover {
+            background: var(--SecondaryColor);
+          }
+        }
+        .icon {
+          font-size: 18px;
         }
       }
     }
-    .card {
-      margin-top: 80px;
-      background: rgb(236, 245, 247);
-      height: max-content;
-      top: 40px;
-      display: flex;
+
+    .footercard {
+      position: relative;
+      padding: 1rem 1rem 4rem;
+      gap: 2rem;
+      border-radius: 1rem;
+      background: var(--bodyColor);
+      width: 100%;
+      justify-content: center;
       flex-direction: column;
-      border-radius: 15px;
-      font-family: 'Times New Roman', Times, serif;
-      container-type: inline-size;
-      
-      .info {
-        padding: 20px 10px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-bottom: 30px;
-
-        .left-side,
-        .right-side{
-          flex-basis: 70%;
-          padding: 20px;
-        }
-
-        .left-side {
-          .logo {
-            margin-bottom: 15px;
-            color: var(--blackColor);
-            font-weight: bold;
-            
-          }
+      align-items: flex-start;
+      overflow: hidden;
+      margin-top: 10px;
+      .footerIntro {
+        flex-basis: 50%;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        row-gap: 0.5rem;
+      }
+      .logoDiv {
+        .logo {
+          color: var(--blackColor);
+          font-weight: 600;
           .icon {
+            font-size: 25px;
             color: var(--PrimaryColor);
-          }
-          .text {
-            color: var(--textColor);
-            font-size: small;
-            font-weight: 600;
-            text-align: justify;
-            font-family: 'Times New Roman', Times, serif;
-          }
-        }
-        .right-side {
-          display: flex;
-          justify-content: space-evenly;
-          font-family: 'Times New Roman', Times, serif;
-          ul li{
-            .icon{
-                font-size: 0.7rem;
-            }
-            h2{
-               color: black; 
-            }
-            margin-top: 10px;
-            margin-bottom: 10px;
-            color: var(--textColor);
-            font-size: small;
-            font-weight: 600;
-            text-align: justify;
+            margin-right: 10px;
           }
         }
       }
-      .copy{
-        display: flex;
+      .footerParagraph {
+        font-size: 12px;
+        color: var(--textColor);
+      }
+      .footerSocials {
+        column-gap: 0.5srem;
+        .icon {
+          color: var(--blackColor);
+          font-size: 20px;
+          &:hover {
+            color: var(--PrimaryColor);
+          }
+        }
+      }
+      .footerLinks {
+        flex-basis: 50%;
+        width: 100%;
+        gap: 1rem;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: space-between;
+        .linkGroup {
+          .title {
+            display: block;
+            font-weight: 600;
+            color: var(--blackColor);
+            margin-bottom: 0.5rem;
+          }
+          .footerList {
+            font-size: 13px;
+            color: var(--textColor);
+            transition: 0.3s ease-in-out;
+            cursor: pointer;
+            .icon {
+              font-size: 13px;
+              color: var(--greyText);
+            }
+            &:hover {
+              color: var(--PrimaryColor);
+              transform: translateX(7px);
+
+              .icon {
+                color: var(--SecondaryColor);
+              }
+            }
+          }
+        }
+      }
+      .footerDiv {
         flex-direction: column;
         position: absolute;
         bottom: 0;
         left: 0;
         right: 0;
-        background: var(--gradientColor);
-        padding: 10px 20px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        .copyright{
-            text-align: center;
-            color: #ccc;
+        background: var(--SecondaryColor);
+        padding: 0.5rem 2rem;
+        small {
+          font-size: 12px;
+          color: var(--whiteColor);
         }
-        
       }
-      .card > h2 {
-        font-size: 12cqi;
+    }
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .footer {
+    .setContent {
+      .footercard {
+        .footerLinks {
+          grid-template-columns: repeat(3, 1fr);
+          padding-bottom: 1rem;
+        }
+        .footerDiv {
+          justify-content: space-between;
+          flex-direction: row;
+          small {
+            font-size: 14px;
+            color: var(--whiteColor);
+          }
+        }
       }
-      .card > p {
-        font-size: 12cqi;
-      }
-      .cardd > p {
-        font-size: 12cqi;
+    }
+  }
+}
+@media screen and (min-width: 650px) {
+  .footer {
+    .setContent {
+      .contactDiv {
+        flex-direction: row;
+        justify-content: space-between;
+        .inputDiv {
+          width: max-content;
+          flex-direction: row;
+          justify-content: flex-start;
+          input {
+            width: 65%;
+          }
+          .btn {
+            width: max-content;
+          }
+        }
       }
     }
   }
 
-  @media (max-width: 720px) {
-    .container {
-      .card {
-        .info {
-          display: block;
-
-          .left-side,
-          .right-side {
-            padding: 0.5rem;
-          }
+}
+@media screen and (min-width: 840px) {
+  .footer {
+    padding: 5rem 0;
+    .setContent {
+      .footercard {
+        flex-direction: row;
+        .footerLinks {
+          grid-template-columns: repeat(3, 1fr);
+          padding-bottom: 1rem;
+        }
+        .footerDiv{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+    
         }
       }
-       
+    }
+ 
+  }
+}
+@media screen and (min-width: 1024px) {
+  .footer {
+    .setContent {
+      .footercard {
+       padding: 3rem 1rem;
+       .footerIntro{
+        .footerParagraph{
+          font-size: 15px;
+          color: var(--textColor);
+          text-align: justify;
+        }
+        .footerSocials{
+          column-gap: .5rem;
+          .icon{
+            font-size: 25px;
+            color: var(--textColor);
+            &:hover{
+              color: var(--PrimaryColor);
+            }
+          }
+        }
+       }
+       .footerLinks{
+        .linkGroup{
+          .footerList{
+            font-size: 16px;
+            padding: 5px 0;
+          }
+        }
+       }
+       .footerDiv{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
       }
-     
+      }
+ 
+    }
+
   }
 }
